@@ -1,7 +1,5 @@
 #
-#	arch/x86/Makefile
-#
-#	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
+#	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
 #
 #	This program is free software; you can redistribute it and/or modify
 #	it under the terms of the GNU General Public License as published by
@@ -21,17 +19,13 @@ ifneq ($(SRCARCH),x86)
   $(error arch/x86/Makefile is included improperly)
 endif
 
-##
 # Default .config prepared for Kconfig
-#
 KBUILD_DEFCONFIG := i386_defconfig
 
-##
 # How to compile the 16-bit code.  Note we always compile for -march=i386;
 # that way we can complain to the user if the CPU is insufficient.
 # The -m16 option is supported by GCC>=4.9. For older versions of GCC, include
 # an assembly header to make sure GCC does not play any games behind our back.
-#
 CODE16GCC_CFLAGS := -m32 -Wa,$(srctree)/arch/x86/boot/code16gcc.h
 M16_CFLAGS	 := $(call cc-option, -m16, $(CODE16GCC_CFLAGS))
 
@@ -44,10 +38,7 @@ REALMODE_CFLAGS  := $(M16_CFLAGS) -Os -D__KERNEL__			\
 		   $(call cc-option, -mpreferred-stack-boundary=2)
 export REALMODE_CFLAGS
 
-##
 # FLAGS for 32-bit Kernel
-#
-
 UTS_MACHINE	:= i386
 CHECKFLAGS	+= -D__i386__
 LDFLAGS		+= -m elf_$(UTS_MACHINE)
@@ -77,48 +68,32 @@ KBUILD_CFLAGS	+= -pipe
 # Prevent GCC from generating any FP code by mistake
 KBUILD_CFLAGS	+= -mno-sse -mno-mmx -mno-sse2 -mno-3dnow
 
-##
-# x86 Architecture-Dependent Kernel Built-in
-#
 # Note that: We separate kernel into different parts,
 # $(head-y), $(init-y), $(core-y) and so on. Normally,
 # the $(head-y) is head.o only, used to jump to $(init-y)
-#
 head-y		:= arch/x86/kernel/head_32.o
 core-y		+= arch/x86/kernel/
 libs-y		+= arch/x86/lib/
-#core-y		+= arch/x86/mm/
-#drivers-y	+= arch/x86/pci/
+core-y		+= arch/x86/mm/
+drivers-y	+= arch/x86/pci/
 
-##
-# x86 Architecture-Dependent Kernel Setup
-#
 # Note that: In x86, the setup part is under real-mode.
 # The setup part of x86 needs to communicate with bootloader
 # such as GRUB or LILO.
-#
 boot-y		:= arch/x86/boot
 KBUILD_IMAGE	:= $(boot-y)/bzImage
 
 all: bzImage
 
-##
 # A phony bzImage. The real bzImage is built in $(boot-y)
-#
 PHONY += bzImage
 bzImage:
 	$(Q)$(MAKE) $(build)=$(boot-y) $(KBUILD_IMAGE)
 
-##
-# Architecture Specific Clean
-#
 PHONY += arch-clean
 arch-clean:
 	$(Q)$(MAKE) $(clean)=$(boot-y)
 
-##
-# Architecture Specific Help
-#
 PHONY += arch-help
 arch-help:
 	@echo  'x86 HELP'
