@@ -1,6 +1,6 @@
 /*
  *	Copyright (C) 2015-2016 Yizhou Shan <shanyizhou@ict.ac.cn>
- *	
+ *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
  *	the Free Software Foundation; either version 2 of the License, or
@@ -16,9 +16,9 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#ifndef _ASM_X86_SECTIONS_H_
-#define _ASM_X86_SECTIONS_H_
+#include <sandix/compiler.h>
 
-#include <asm-generic/sections.h>
+void __init traps_init(void)
+{
 
-#endif /* _ASM_X86_SECTIONS_H_ */
+}
