@@ -1,6 +1,1 @@
-#
-# Makefile for Sandix Memory Management
-#
-
-obj-y += init_mem.o
-obj-y += e820.o
+obj-y := init_mem.o
